working shrinking collision

--- a/swiftlevel1.html
+++ b/swiftlevel1.html
@@ -35,9 +35,12 @@
 <!-- Start javascript/main.js -->
     <script src="./public/yabble.js"></script>
     <script src="./public/gamejs.min.js"></script>
+    <script src="./javascript/creator.js"></script>
+    
     <script>
         require.setModuleRoot('./javascript/');
         require.run('level1')
+   
     </script>
 </head>
 <!-- Html -->
